@@ -138,9 +138,9 @@ dynamic_account_ban: 1
 dynamic_account_ban_class: 0
 
 // Anti-freeze system enable
-anti_freeze_enable: 0
+anti_freeze_enable: 1
 // Anti-freeze system interval (in seconds)
-anti_freeze_interval: 15
+anti_freeze_interval: 30
 
 // Enable I'm Alive?
 imalive_on: 0
